Upload instructor profile picture
