# src/instructor/application/dto/request/upload-instructor-profile-picture.request.dto.type.ts
@@ -1,0 +1,11 @@
+import { MimeTypes } from "../../../../utils";
+
+
+interface UploadInstructorProfilePictureRequestDTO {
+	authorizationToken: string;
+	mimeType: MimeTypes
+}
+
+export {
+	UploadInstructorProfilePictureRequestDTO
+};
